--- a/src/main/resources/com/example/homepage/addAdminPage.fxml
+++ b/src/main/resources/com/example/homepage/addAdminPage.fxml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane stylesheets="@profileStyle.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.addAdminController">
+<BorderPane stylesheets="@profileStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.homepage.addAdminController">
    <center>
       <AnchorPane prefHeight="1718.0" prefWidth="883.0" BorderPane.alignment="CENTER">
          <children>
@@ -30,7 +25,7 @@
                   <TextField fx:id="phoneNumber" alignment="CENTER" layoutX="80.0" layoutY="88.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Phone Number" stylesheets="@styles.css" />
                   <TextField fx:id="username" alignment="CENTER" layoutX="15.0" layoutY="112.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Username" />
                   <TextField fx:id="password" alignment="CENTER" layoutX="15.0" layoutY="151.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="275.0" promptText="Password" />
-                  <TextField fx:id="confrimPassword" alignment="CENTER" layoutX="15.0" layoutY="190.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="276.0" promptText="confirmPassword" />
+                  <TextField fx:id="confirmPassword" alignment="CENTER" layoutX="15.0" layoutY="190.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="39.0" prefWidth="276.0" promptText="confirmPassword" />
                   <Button id="signInBtn" mnemonicParsing="false" onAction="#addAdmin" stylesheets="@profileStyle.css" text="Add Admin" />
                </children>
                <padding>
